<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#77000000"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ProgressBar
            android:indeterminate="true"
            android:indeterminateTint="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="0.3">

            <TextView
                android:text="@string/register_number"
                android:textSize="@dimen/sp_24"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/register_number"
                android:hint="@string/enter_number"
                android:padding="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/register_number_btn"
                android:text="@string/register_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="handleClick"
                android:layout_marginTop="@dimen/dp_5"
                android:outlineProvider="bounds"
                android:background="@android:color/transparent"
                android:foreground="?attr/selectableItemBackground"
                android:padding="@dimen/dp_5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="0.3"
            android:layout_marginTop="@dimen/dp_20">

            <TextView
                android:text="@string/deregister_Number"
                android:textStyle="bold"
                android:textSize="@dimen/sp_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/deregister_number"
                android:hint="@string/enter_number"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/deregister_number_btn"
                android:text="@string/deregister_Number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="handleClick"
                android:layout_marginTop="@dimen/dp_5"
                android:outlineProvider="bounds"
                android:background="@android:color/transparent"
                android:foreground="?attr/selectableItemBackground"
                android:padding="@dimen/dp_5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:text="@string/text_for_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_20"/>

            <Button
                android:id="@+id/refresh_contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh_contacts"
                android:onClick="handleClick"
                android:outlineProvider="bounds"
                android:background="@android:color/transparent"
                android:foreground="?attr/selectableItemBackground"
                android:padding="@dimen/dp_5"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>